# fraud-detection-energy

./: .gitignore  energia_fraud_pipeline.yaml  pyproject.toml
data/raw/: dados_medidores_energia.csv
elyra/elyra_pipeline/: 2_train_model.ipynb  3_register_mlflow.ipynb
notebooks/: 1_generate_dataset.ipynb  csv-generator.ipynb
pipelines/: csv-generator-1000rgs-draft.py  energia_fraud_pipeline.py
pipelines/components/ingest/: Dockerfile  ingest.py
pipelines/components/preprocess/: Dockerfile  preprocess.py
pipelines/components/train/: Dockerfile  train.py
